<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.95">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clearentryBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/btn_state"
                android:onClick="clearentryBTN"
                android:text="@string/clearentry"
                android:textSize="18sp" />

            <Button
                android:id="@+id/clearBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/btn_state"
                android:onClick="clearBTN"
                android:text="@string/clear"
                android:textSize="18sp" />

            <Button
                android:id="@+id/backspaceBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/btn_state"
                android:onClick="backspaceBTN"
                android:text="@string/backspace"
                android:textSize="18sp" />

            <Button
                android:id="@+id/divideBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/btn_state"
                android:onClick="divideBTN"
                android:text="@string/divide"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sevenBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/number_state"
                android:onClick="sevenBTN"
                android:text="@string/seven"
                android:textSize="18sp" />

            <Button
                android:id="@+id/eightBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/number_state"
                android:onClick="eightBTN"
                android:text="@string/eight"
                android:textSize="18sp" />

            <Button
                android:id="@+id/nineBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/number_state"
                android:onClick="nineBTN"
                android:text="@string/nine"
                android:textSize="18sp" />

            <Button
                android:id="@+id/multiplyBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/btn_state"
                android:onClick="multiplyBTN"
                android:text="@string/multiply"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fourBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/number_state"
                android:onClick="fourBTN"
                android:text="@string/four"
                android:textSize="18sp" />

            <Button
                android:id="@+id/fiveBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/number_state"
                android:onClick="fiveBTN"
                android:text="@string/five"
                android:textSize="18sp" />

            <Button
                android:id="@+id/sixBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/number_state"
                android:onClick="sixBTN"
                android:text="@string/six"
                android:textSize="18sp" />

            <Button
                android:id="@+id/subBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/btn_state"
                android:onClick="subBTN"
                android:text="@string/sub"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/oneBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/number_state"
                android:onClick="oneBTN"
                android:text="@string/one"
                android:textSize="18sp" />

            <Button
                android:id="@+id/twoBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/number_state"
                android:onClick="twoBTN"
                android:text="@string/two"
                android:textSize="18sp" />

            <Button
                android:id="@+id/threeBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/number_state"
                android:onClick="threeBTN"
                android:text="@string/three"
                android:textSize="18sp" />

            <Button
                android:id="@+id/addBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/btn_state"
                android:onClick="addBTN"
                android:text="@string/add"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/plusMinusBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/btn_state"
                android:onClick="plusMinusBTN"
                android:text="@string/plusMinus"
                android:textSize="18sp" />

            <Button
                android:id="@+id/zeroBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/number_state"
                android:onClick="zeroBTN"
                android:text="@string/zero"
                android:textSize="18sp" />

            <Button
                android:id="@+id/pointBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/btn_state"
                android:onClick="pointBTN"
                android:text="@string/point"
                android:textSize="18sp" />

            <Button
                android:id="@+id/equalsBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/btn_state"
                android:onClick="resultsBTN"
                android:text="@string/equal"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="false"
        android:inputType="none"
        android:textSize="36sp"
        android:textAlignment="textEnd"
        tools:ignore="LabelFor"/>
</androidx.constraintlayout.widget.ConstraintLayout>